# conntour-space-explorer

./: README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  app.py  exceptions.py  filters.py  models.py  pyproject.toml  repository.py
backend/controllers/: __init__.py  auth.py  search.py  source.py  user.py
backend/db/: __init__.py  base.py  models.py  session.py
backend/modules/auth/: repository.py  router.py  schemas.py  security.py
backend/modules/search_history/: repository.py  router.py  schemas.py
backend/modules/sources/: repository.py  router.py
backend/modules/users/: repository.py  router.py  schemas.py
backend/repositories/: __init__.py  auth.py  base.py  source.py  user.py
backend/schemas/: __init__.py  auth.py  source.py  user.py
backend/scripts/: seed_db.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx  setupProxy.js  types.ts
frontend/src/api/: auth.ts  axiosSetup.ts  searchHistory.ts  sources.ts
frontend/src/components/: Search.tsx  SourceCard.tsx  Sources.tsx  Spinner.tsx  Tooltip.tsx  TruncatedText.tsx
frontend/src/components/auth/: AuthCard.tsx  AuthForm.tsx  AuthToggle.tsx  Register.tsx  SignIn.tsx  types.ts
frontend/src/components/search/: FilterPanel.tsx  ResultsList.tsx  Search.tsx  SearchDropdown.tsx  SearchInput.tsx  types.ts
frontend/src/hooks/: useModal.ts  useToggle.ts
frontend/src/pages/: AuthPage.tsx  Home.tsx  Register.tsx  SearchResults.tsx  SignIn.tsx
(+45 files in other folders)
